# BlackboxLoader

./: .gitignore  BUILD.md  Blackbox.ini.example  CMakeLists.txt  README.md  TESTING.md  version.def  winhttp.def
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: config.c  config.h  config_reader.c  config_reader.h  dllmain.c  ini_parser.c  ini_parser.h  plugin_loader.c  plugin_loader.h  proxy_exports.c  proxy_exports.h
